tests/indeterminate_module_type/es_decl_after_cjs.js
// @flow
module.exports = 0;
export const x = 0; // error
(0: string); // error
